// Copyright 2020 The Atlas Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package atlas;

import "domain.proto";
import "object_request.proto";

message ObjectsRequest {
    oneof request_domain_optional {
        // Request Domain - what type of entity the request is made about Ex.: atlas.DomainTask
        Domain request_domain = 100;
    }

    oneof result_domain_optional {
        // Result Domain - what type of entity is expected as a result.
        // Ex.: atlas.DomainReport, atlas.DomainTask, atlas.DomainStatus, atlas.DomainFile
        Domain result_domain = 300;
    }

    repeated ObjectRequest requests = 200;
}
